resolved all warnings that do not require refactor